# photo_editor

./: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
notes/: convolutions.md
src/: App.css  App.tsx  index.css
src/components/: index.tsx
src/components/image_preview/: ImagePreview.tsx  canvas_context.tsx
src/components/sidebar/: Sidebar.tsx
src/components/tool_panel/: ToolPanel.tsx
src/components/tools/: ColorCorrectionTool.tsx  GrainTool.tsx  HalationTool.tsx  index.tsx
src/components/tools/tool_logic/: FilterSettings.ts  Grain.ts  Halation.ts  ImageComposition.ts  index.ts
src/pkg/: package.json  wasm_processor.d.ts  wasm_processor.js  wasm_processor_bg.wasm  wasm_processor_bg.wasm.d.ts
src/utils/: WasmProcessor.ts  WebGLProcessor.ts  constants.ts  toolTypes.ts
wasm-processor/: Cargo.toml
wasm-processor/.cargo/: config.toml
wasm-processor/src/: lib.rs
wasm-processor/src/compostion/: image_composition.rs  mod.rs
wasm-processor/src/grain/: grainer.rs  mod.rs
wasm-processor/src/halations/: blur.rs  brightness_mask.rs  color_tint.rs  mod.rs
