[package]
name = "wasm-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.8"
rand = "0.8.5"
statrs = "0.18.0"
wasm-bindgen = "0.2.105"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
